# project_drone_course

control/: Dockerfile  docker-compose.yaml  launch_as2.bash
control/config/: config.yaml  gates_config2.yaml  initialize.bash  rviz2_config.rviz  tmuxinator.yaml
control/docs/: INSTALLATION.md
control/drone_course_ws/src/exercise_1/include/exercise_1/: exercise_1_1.hpp  exercise_1_2.hpp
control/drone_course_ws/src/exercise_1/src/: exercise_1_1.cpp  exercise_1_1_node.cpp  exercise_1_2.cpp  exercise_1_2_node.cpp
control/drone_course_ws/src/exercise_3/: CMakeLists.txt  package.xml
control/drone_course_ws/src/exercise_3/include/exercise_3/: exercise_3.hpp
control/drone_course_ws/src/exercise_3/src/: exercise_3.cpp  exercise_3_node.cpp
control/exercises/: Exercise1.md  Exercise2.md  Exercise3.md
control/python_interface/exercise_1/: ex1_1.py  exercise_1_1.py  exercise_1_2.py
control/python_interface/exercise_2/: ex2.py
control/python_interface/exercise_3/: ex3.py  ex4.py  ex5.py  exercise_3.py  trajectory_generator.py
control/python_interface/state_estimation/: exercise.py
